# prod-gemini-agent

./: .gitignore  README.md  SUBMISSION.md  pyproject.toml
docs/: DEMO_SCRIPT.md  DEPLOY.md
examples/: batch_summarize.py
src/prod_gemini_agent/: __init__.py  agent.py  breaker.py  budget.py  cache.py  client.py  fleet.py  retry.py  trace.py
tests/: conftest.py  test_agent.py  test_breaker.py  test_budget.py  test_cache.py  test_client.py  test_fleet.py  test_retry.py  test_trace.py
